logo boolean e titolo gioco

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
    <link rel="stylesheet" href="css/style.css">
-   <title>Es 2/3 nov</title>
+   <title>js-campominato-grid</title>
 </head>
 <body>
-   
+
+   <header>
+      <div class="boolean">
+         <div class="logo-boolean">
+            <img src="img/logo-boolean.png" alt="logo boolean">
+         </div>
+         <div class="text-boolean">
+            <h2>
+               Campo Minato
+            </h2>
+         </div>
+      </div>
+   </header>
+
+
+
    <div class="main-wrapper">
       <div class="container">
          
