--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
             <img src="img/logo-boolean.png" alt="logo boolean">
          </div>
          <div class="text-boolean">
-            <h2>
-               Campo Minato
-            </h2>
+            <h2>Campo Minato</h2>
          </div>
+      </div>
+      <div class="difficolta">
+         <span>Difficoltà:</span>
+         <div class="select" style="width:80px;">
+            <select>
+              <option value="1">Easy</option>
+              <option value="2">Hard</option>
+              <option value="3">Crazy</option>
+            </select>
+         </div>
+         <button>Play</button>
+        
       </div>
    </header>
 
