--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
          <span>Difficoltà:</span>
          <div class="select" style="width:80px;">
             <select>
-              <option value="1">Easy</option>
-              <option value="2">Hard</option>
-              <option value="3">Crazy</option>
+              <option class="play-button" value="1">Easy</option>
+              <option class="play-button" value="2">Hard</option>
+              <option class="play-button" value="3">Crazy</option>
             </select>
          </div>
          <button>Play</button>
