genera una tabella se premi play

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
          <span>Difficoltà:</span>
          <div class="select" style="width:80px;">
             <select>
-              <option class="play-button" value="1">Easy</option>
-              <option class="play-button" value="2">Hard</option>
-              <option class="play-button" value="3">Crazy</option>
+              <option class="play-button" value="easy">Easy</option>
+              <option class="play-button" value="hard">Hard</option>
+              <option class="play-button" value="crazy">Crazy</option>
             </select>
          </div>
-         <button>Play</button>
+         <button id="gioca">Play</button>
         
       </div>
    </header>
@@ -41,6 +41,9 @@
       <div class="container">
          
       </div>
+      <h1 id="title">
+         Seleziona il livello di difficoltà e genera la griglia
+      </h1>
    </div>
 
 
