--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 
+<!-- HEADER -->
    <header>
       <div class="boolean">
          <div class="logo-boolean">
@@ -36,7 +37,7 @@
    </header>
 
 
-
+<!-- MAIN -->
    <div class="main-wrapper">
       <div class="container">
          
@@ -46,9 +47,17 @@
       </h1>
    </div>
 
+<!-- FOOTER -->
 
+   <footer>
+      <div class="footer-text">
+         <div class="box">
+            Made with &#9829 by <a href="#">Boolean</a>
+         </div>
+      </div>
+   </footer>
 
-
+   
 
    <script src="js/script.js"></script>
 </body>
