--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
          <span>Difficoltà:</span>
          <div class="select" style="width:80px;">
             <select>
-              <option class="play-button" value="easy">Easy</option>
-              <option class="play-button" value="hard">Hard</option>
-              <option class="play-button" value="crazy">Crazy</option>
+              <option class="play-button" value="1">Easy</option>
+              <option class="play-button" value="2">Hard</option>
+              <option class="play-button" value="3">Crazy</option>
             </select>
+               
          </div>
          <button id="gioca">Play</button>
         
@@ -48,7 +49,6 @@
    </div>
 
 <!-- FOOTER -->
-
    <footer>
       <div class="footer-text">
          <div class="box">
