--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="difficolta">
          <span>Difficoltà:</span>
          <div class="select" style="width:80px;">
-            <select>
-              <option class="play-button" value="1">Easy</option>
+            <select id="livello">
+              <option class="play-button" value="1" selected>Easy</option>
               <option class="play-button" value="2">Hard</option>
               <option class="play-button" value="3">Crazy</option>
             </select>
@@ -40,9 +40,6 @@
 
 <!-- MAIN -->
    <div class="main-wrapper">
-      <div class="container">
-         
-      </div>
       <h1 id="title">
          Seleziona il livello di difficoltà e genera la griglia
       </h1>
